--- a/doc/secciones/02_estado_del_arte.tex
+++ b/doc/secciones/02_estado_del_arte.tex
@@ -4,7 +4,7 @@ En este capítulo se realiza un análisis de las herramientas y tecnologías
 disponibles que pueden ser utilizadas en el proyecto. Dado que el trabajo se 
 encuentra en una fase inicial, aún no se pueden definir completamente todos
 los requisitos funcionales. Sin embargo, a partir de las necesidades
-generales identificadas, se puede realizar un estudio del estado actual
+generales identificadas, se puede llevar a cabo un estudio del estado actual
 de las soluciones disponibles.
 
 El objetivo de este capítulo es servir como base para la toma de 
@@ -12,7 +12,7 @@ decisiones tecnológicas en fases posteriores del proyecto.
 
 \section{Enfoque del análisis}
 Como no es posible definir todos los requisitos funcionales del proyecto
-desde el inicio, se establecen unos criteros básicos y flexibles para
+desde el inicio, se establecen unos criterios básicos y flexibles para
 poder guiar el análisis de las herramientas y tecnologías:
 
 \begin{itemize}
@@ -21,7 +21,7 @@ poder guiar el análisis de las herramientas y tecnologías:
     \item \textbf{Comunidad y soporte}: Se priorizarán aquellas con una comunidad activa
     y buena documentación.
     \item \textbf{Compatibilidad}: Se deberán integrar fácilmente con otras tecnologías
-    que se vayan a utilizar.
+    que se vayan a emplear.
     \item \textbf{Licencia}: Se preferirán herramientas de código abierto debido al
     contexto académico del proyecto.
     \item \textbf{Rendimiento}: Se valorará su capacidad para manejar grandes volúmenes
@@ -52,9 +52,9 @@ tratamiento semántico explícito. A continuación, se analizan algunos ejemplos
 \begin{itemize}
     \item \textbf{DrawShield:} es una herramienta online que permite generar escudos de armas
     a partir de blasones escritos en inglés. Utiliza un lenguaje formalizado cercano al blasonado
-    tradicional, y produce imágenes SVG, facilitando su uso como recurso visual. Aunque está 
+    tradicional, y produce imágenes SVG, facilitando su utilización como recurso visual. Aunque está 
     centrada en la heráldica anglosajona y no es completamente de código abierto, su 
-    uso es gratuito y posee suficiente documentación técnica pública para permite entender su 
+    uso es gratuito y posee suficiente documentación técnica pública para entender su 
     funcionamiento. Puede resultar útil como apoyo visual o para explorar la traducción del
     texto heráldico a imágenes.
     \item \textbf{Coat of Arms Maker:} son un conjunto de herramientas gráficas que permiten
@@ -76,7 +76,7 @@ tratamiento semántico explícito. A continuación, se analizan algunos ejemplos
 
 En general, estos sistemas tienen distintas finalidades y niveles de detalle. Algunos se centran
 en la representación visual de escudos, otros en la interpretación del lenguaje heráldico, y
-otros simplemente recopilan información sin un tratamiento semántico explícito, pero ninguno
+otros simplemente recopilan información sin un tratamiento semántico explícito, no obstante ninguno
 de ellos ofrece un modelo completo que permita el análisis profundo y la integración de la 
 heráldica en entornos digitales inteligentes.
 
@@ -84,7 +84,7 @@ heráldica en entornos digitales inteligentes.
 En el ámbito de la representación formal del conocimiento heráldico, las ontologías y los esquemas 
 semánticos han cobrado importancia como herramientas que permiten estructurar la información de
 forma que sea comprensible tanto por humanos como por máquinas. Estas herramientas buscan representar
-los elementos de un escudo (tales como figuras, particiones o esmaltes) y sus relaciones, de forma
+los elementos de un escudo (tales como figuras, particiones o esmaltes) y sus relaciones, de manera
 lógica y reutilizable, lo que resulta especialmente útil en aplicaciones digitales como bases de 
 datos, sistemas de recuperación de información o inteligencia artificial.
 
