--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -261,30 +261,33 @@
   address   = {Madrid, España}
 }
 
-@misc{,
-	author       = {}, 
-	title        = {},
-	howpublished = {\url{}}
+@misc{drawshield,
+  author = {DrawShield},
+  title = {DrawShield},
+  url = {https://drawshield.net/index.html}
 }
 
-@misc{,
-	author       = {}, 
-	title        = {},
-	howpublished = {\url{}}
+@misc{coat_of_arms,
+  author = {Coat of Arms Maker},
+  title = {Coat of arms Maker},
+  url = {https://coamaker.com/}
 }
 
-@misc{,
-	author       = {}, 
-	title        = {},
-	howpublished = {\url{}}
+@misc{pyBlazon,
+  author = {PyBlazon},
+  title = {PyBlazon},
+  url = {https://web.meson.org/pyBlazon/}
 }
 
-@misc{,
-	author       = {}, 
-	title        = {},
-	howpublished = {\url{}}
+@misc{hero_ontology,
+  author = {National Archives of Finland},
+  title = {HERO - Ontology of Heraldry},
+  url = {https://finto.fi/en/ontology/heraldica/}
 }
 
-
-
+@misc{digital_heraldry,
+  author = {Digital Heraldry},
+  title = {Digital Heraldry},
+  url = {https://digitalheraldry.org/digital-heraldry-ontology/heraldry/documentation/index-en.html}
+}
 
