Reescribe relacionando con la descripción #33
Se hablaba del problema haciendo alusión a una posible solución. Ahora se habla del problema relacionándolo con la descripción de este en el capítulo anterior

--- a/doc/secciones/02_estado_del_arte.tex
+++ b/doc/secciones/02_estado_del_arte.tex
@@ -1,17 +1,18 @@
 \chapter{Estado del arte}
 
 En este capítulo se realiza un análisis de las herramientas y tecnologías
-existentes que abordan la representación digital de la heráldica, con el fin
+existentes que permiten analizar y/o clasificar de manera digital la heráldica, con el fin
 de determinar en qué medida responden a las necesidades del cliente.
 El objetivo de este capítulo es identificar qué aspectos están ya resueltos,
 cuáles son sus limitaciones y qué vacíos justifican la propuesta del proyecto.
 Además, servirá como base para la toma de decisiones tecnológicas en fases posteriores.
 
 \section{Enfoque del análisis}
-El objetivo de este capítulo es estudiar cómo se ha abordado hasta ahora el problema de 
-la representación digital de escudos de armas desde distintos enfoques, y evaluar en qué 
-medida estas soluciones responden a las necesidades del proyecto y sus futuros usuarios.
-Los aspectos que se compararán incluyen:
+El objetivo de este capítulo es estudiar cómo se han abordado hasta ahora el análisis y
+clasificación de escudos de armas en el ámbito digital, y evaluar en qué medida estas soluciones 
+responden a las necesidades del proyecto y sus futuros usuarios.
+Tal y como se indica en la descripción del problema, se compararán los siguientes aspectos 
+relacionados con el análisis y la clasificación de escudos de armas:
 
 \begin{itemize}
     \item \textbf{Representación visual}: Se examinarán las herramientas que permiten
@@ -22,7 +23,7 @@ Los aspectos que se compararán incluyen:
     organizan la información heráldica de manera estructurada y reutilizable para facilitar
     su análisis y procesamiento automático.
     \item \textbf{Usabilidad y accesibilidad}: Se evaluará la facilidad de uso de las herramientas
-    para usuarios no expertos, además de su utilidad para tareas de análisis o generación automática.
+    para usuarios no expertos, además de su utilidad para tareas de análisis o clasificación.
     \item \textbf{Tipo de heráldica}: El tipo de heráldica que cubren (nacional, eclesiástica, etc.).
 \end{itemize}
 
@@ -32,7 +33,7 @@ cubiertas, lo que justificará el desarrollo de este proyecto.
 \section{Tecnologías actuales en el ámbito de la heráldica}
 En esta sección se analizan las tecnologías y herramientas existentes aplicadas a la representación
 digital de la heráldica, con el fin de detectar las limitaciones actuales y las oportunidades
-de mejora.
+de mejora para satisfacer al cliente.
 
 Por un lado, se analizarán las herramientas de software que ya representan escudos heráldicos,
 y por otro, se explorarán propuestas de organización de la información más estructuradas
