--- a/doc/secciones/02_estado_del_arte.tex
+++ b/doc/secciones/02_estado_del_arte.tex
@@ -27,7 +27,7 @@ uno eclesiástico. Cada estilo tiene convenciones propias en cuanto a formas,
 terminología y reglas de composición.
 
 Adelanto que este proyecto se centrará específicamente en la heráldica española y eclesiástica, 
-atendiendo a las necesidades de los clientes las cuáles se exponen de manera más específica en 
+atendiendo a las necesidades de los clientes las cuales se exponen de manera más específica en 
 el próximo capítulo. Estas particularidades culturales y simbólicas deben tenerse en cuenta 
 desde el principio, ya que afectan tanto a la representación visual como a la estructuración 
 semántica de los escudos.
@@ -41,7 +41,7 @@ relacionados con el análisis y la clasificación de escudos de armas:
 
 \begin{itemize}
     \item \textbf{Representación visual}: Es un aspecto clave para usuarios que desean identificar
-    los escudos de forma intuitiva, por ejemplo, en la fachada de un edificio. Se examinarán las 
+    los escudos de manera intuitiva, por ejemplo, en la fachada de un edificio. Se examinarán las 
     herramientas que permiten generar imágenes de escudos a partir de descripciones textuales o 
     mediante interfaces gráficas.
     \item \textbf{Estructuración semántica}: Se revisarán las ontologías y esquemas que
@@ -92,8 +92,8 @@ A continuación, se analizan algunos ejemplos desde los criterios previamente me
     inglés, con el objetivo de analizar su estructura. Aún está en desarrollo, por lo que tiene
     una cobertura del vocabulario heráldico limitada, centrada además en escudos ingleses.
     Reconoce los elementos básicos del blasonado, como figuras, esmaltes y particiones.
-    No genera representaciones visuales por sí sola, pero puede ser útil como un punto de partida
-    para estudiar cómo se puede interpretar el lenguaje heráldico de forma automática. Habría que
+    Aunque no genera representaciones visuales por sí sola, puede ser útil como un punto de partida
+    para estudiar cómo se puede interpretar el lenguaje heráldico de modo automático. Habría que
     adaptarla para que pueda trabajar con la heráldica española y eclesiástica.
     \item \textbf{Wikipedia y Wikimedia Commons:} si bien no son herramientas en sentido estricto,
     estas plataformas representan una gran fuente de escudos digitalizados con descripciones
